--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Workshop creating a social network for developers.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server"
   },
   "author": "Loka Kanarp",
   "license": "MIT",
